# easydict

./: .gitignore  README.md  analysis_options.yaml  example.json  import_json_to_dictionary.dart  inspect_db.dart  pubspec.yaml
.github/workflows/: dart.yml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  jni_init.cpp
assets/: word_list.db
auxi_tools/: build_db_from_jsonl.py
docs/: dictionary_schema_improvement.md
ios/: zstd.podspec
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: board_widget.dart  component_renderer.dart  database_service.dart  dictionary_renderer.dart  dictionary_search.dart  layout_config.dart  main.dart  theme_provider.dart  word_bank_page.dart  word_bank_service.dart
lib/components/: board_widget.dart  component_renderer.dart  dictionary_interaction_scope.dart  dictionary_logo.dart  dictionary_navigation_panel.dart  english_db_download_dialog.dart  global_scale_wrapper.dart  global_text_selection.dart  hidden_languages_scope.dart  json_text_editor.dart  path_scope.dart  scale_layout_wrapper.dart  selectable_rich_text.dart  text_selection_example.dart  text_selection_handler.dart  text_selection_scope.dart  theme_mode_selector.dart  transfer_progress_panel.dart  window_buttons.dart
lib/core/: logger.dart
lib/data/: database_service.dart  word_bank_service.dart
lib/i18n/: en.i18n.json  strings.g.dart  strings_en.g.dart  strings_zh.g.dart  zh.i18n.json
lib/models/: dictionary_entry_group.dart  remote_dictionary.dart
lib/pages/: cloud_service_page.dart  dictionary_category_page.dart  dictionary_manager_page.dart  dictionary_search.dart  entries_list_sheet.dart  entry_detail_page.dart  entry_detail_page_private_widgets.dart  entry_edit_page.dart  font_config_page.dart  help_page.dart  json_editor_bottom_sheet.dart  llm_config_page.dart  online_subscription_page.dart  settings_page.dart  text_selection_test_page.dart  theme_color_page.dart  toolbar_config_page.dart  user_dict_entry_page.dart  word_bank_page.dart
lib/services/: advanced_search_settings_service.dart  ai_chat_database_service.dart  ai_chat_history_service.dart  ai_service.dart  app_update_service.dart  auth_service.dart  chinese_convert_service.dart  clipboard_watcher_service.dart  daily_word_service.dart  data_migration_service.dart  dict_update_check_service.dart  dictionary_manager.dart  llm_client.dart  (+21 more)
linux/: CMakeLists.txt
macos/: zstd.podspec
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+38 files in other folders)
